--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ const renderCardTemplate = (card) => (`
     <div class="card-body">
       <h3 class="card-title">Name: <span class="badge" style="background-color:${colors[0]};">${card.name}</span></h3>
       <table>
-        <tr><td><span class="badge" style="color:${colors[1]};">Favorite Style:</span></td><td>${card.favStyle}</td></tr>
-        <tr><td><span class="badge" style="color:${colors[2]};">Proudest Send:</span></td><td>${card.proudestSend}</td></tr>
-        <tr style="border-bottom: none !important;"><td><span class="badge" style="color:${colors[3]};">Catchphrase:</span></td><td>"${card.catchphrase}"</td></tr>
+        <tr><td><span class="badge" style="color:${colors[1]};">Favorite Style:</span></td><td class="smaller-text">${card.favStyle}</td></tr>
+        <tr><td><span class="badge" style="color:${colors[2]};">Proudest Send:</span></td><td class="smaller-text">${card.proudestSend}</td></tr>
+        <tr style="border-bottom: none !important;"><td><span class="badge" style="color:${colors[3]};">Catchphrase:</span></td><td class="smaller-text">"${card.catchphrase}"</td></tr>
       </table>
     </div>
   </div>
